--- a/style1.css
+++ b/style1.css
@@ -277,6 +277,15 @@ display: block;
 
 }
  
+.ourteam{
+    
+       height: 1600px;
+      width: 100%;
+overflow: hidden;
+  position: relative;
+  display: inline-block;
+
+
 
 }
 .card{
