--- a/style1.css
+++ b/style1.css
@@ -169,6 +169,9 @@ img{
 }
 
 
+.card{
+
+padding-top: 50px;
 
 
 
@@ -226,6 +229,18 @@ font-weight: bold;
     
 
    } 
+	.ourteam{
+    
+       height: 1600px;
+      width: 100%;
+overflow: hidden;
+  position: relative;
+  display: inline-block;
+
+
+ 
+
+}
    
 
 
